--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "scripts": {
-        "test": "phpunit tests/ --log-junit=./build/test-results/log.xml"
+        "test": "phpunit"
     },
     "config": {
         "bin-dir": "bin"
