--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,17 @@
         "monolog/monolog": "^1.22"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.7.*"
+        "phpunit/phpunit": "5.7.*",
+        "kodova/poser": "1.0.0"
     },
     "autoload": {
         "psr-4": {
             "GeniusMonkey\\Router\\" : "src/GeniusMonkey/Router"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Mocks\\" : "tests/Mocks/"
         }
     },
     "scripts": {
